--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
             integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
             crossorigin="anonymous"
         />
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,400,700" rel="stylesheet" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
